fix: homepage list spacing on last item

--- a/src/renderer/scss/component/_media.scss
+++ b/src/renderer/scss/component/_media.scss
@@ -655,11 +655,12 @@
     @media (min-width: 601px) {
       width: calc((100% / 6) - 2.25rem);
       margin-left: var(--spacing-vertical-large);
+    }
 
-      &:last-of-type {
-        // For some reason margin doesn't work here.
-        padding-right: var(--spacing-vertical-large);
-      }
+    &:last-of-type {
+      // We can't use margin or padding because overlfow: hidden ignores those
+      // border-right ensures the last item in the scrollable list has some space to the right
+      border-right: var(--spacing-vertical-large) solid transparent;
     }
 
     // May be needed for mobile design
